[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/UI/button_pressed.png" type="Texture" id=1]
[ext_resource path="res://Assets/UI/button_hover.png" type="Texture" id=2]
[ext_resource path="res://Assets/UI/button_normal.png" type="Texture" id=3]
[ext_resource path="res://Prefabs/Dynamic_Fonts/UI_font.tres" type="DynamicFont" id=4]
[ext_resource path="res://Scripts/Remap_Button.gd" type="Script" id=5]
[ext_resource path="res://Prefabs/audio_manager.tscn" type="PackedScene" id=6]

[node name="Button" type="TextureButton"]
margin_right = 80.0
margin_bottom = 20.0
toggle_mode = true
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 1 )
texture_hover = ExtResource( 2 )
texture_disabled = ExtResource( 3 )
texture_focused = ExtResource( 2 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Input_name" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 4 )
align = 1
valign = 1
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="audio_manager" parent="." instance=ExtResource( 6 )]

[connection signal="focus_exited" from="." to="." method="_on_Button_focus_exited"]
